# shell-configs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .shellcheckrc  .tokeignore  AGENTS.md  CHANGELOG.md  Justfile  LICENSE  README.md  cloud-setup.sh  main.py  pyproject.toml  release-please-config.json  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  ci.yml  dependabot-automerge.yml  e2e.yml  publish.yml  release.yml
.hooks/: post-merge  pre-commit
config/: shared.gitconfig  shared.sh
config/bash/: bashrc
config/git/: ignore
config/zsh/: zshrc
docs/: CLI_REFERENCE.md
script/: cloud-setup.sh  code_quality.sh  generate_cli_docs.py
scripts/git/: fix-git-case-conflicts.sh
scripts/transcription/: transcribe.py
scripts/work_laptop/: clone-repos  disk-cleanup  new-laptop-setup
src/shell_configs/: __init__.py  agent_manifest.py  agents.py  agents_registry.py  cli.py  completions.py  config.py  display.py  extensions.py  fsio.py  gh_auth.py  gh_extensions.py  installer.py  installers.py  languages.py  manager.py  platform.py  script_manager.py  signing.py
src/shell_configs/bootstrap/: __init__.py  config.py  detection.py  installer.py  updater.py  version.py
src/shell_configs/cli/: __init__.py  __main__.py  context.py  helpers.py  options.py
src/shell_configs/cli/commands/: cleanup.py  diff.py  info.py  install.py  list_shells.py  setup.py  signing.py  status.py  uninstall.py  upgrade.py  validate.py
src/shell_configs/cli/components/: __init__.py  agents.py  completions.py  configs.py  extensions.py  gh_auth.py  gh_extensions.py  languages.py  packages.py  scripts.py  signing.py
src/shell_configs/cli/groups/: __init__.py  completions.py  configs.py  extensions.py  packages.py  profile.py  scripts.py
src/shell_configs/config/: agents.yaml  gh_auth.yaml  gh_extensions.yaml  languages.yaml  packages.yaml  shared.gitconfig  shared.ps1  shared.sh
src/shell_configs/config/bash/: bashrc  completions.bash
src/shell_configs/config/cursor/: extensions-local.txt  keybindings.json  settings.json
src/shell_configs/config/editor/: extensions.txt  keybindings.json  settings.json
src/shell_configs/config/git/: ignore
src/shell_configs/config/iterm2/: preferences.json  profile.json
src/shell_configs/config/lib/: ssl_fix.rb
src/shell_configs/config/notepadpp/: config.xml
src/shell_configs/config/platform/: linux.sh  macos.sh  windows.ps1  wsl.sh
src/shell_configs/config/profiles/: default.yaml  work.yaml
src/shell_configs/config/script/: ssl_fix.rb
src/shell_configs/config/sublime/: settings.json
src/shell_configs/config/vscode/: extensions-local.txt  extensions.txt  settings.json
src/shell_configs/config/windows-terminal/: settings.json
src/shell_configs/config/xdg/: mimeapps.list
src/shell_configs/config/zsh/: completions.zsh  zshrc
src/shell_configs/manager/: __init__.py  core.py  types.py
src/shell_configs/profiles/: __init__.py  loader.py  profile.py  state.py
src/shell_configs/scripts/: scripts.toml
src/shell_configs/scripts/git/: check_pr_release_status.py
src/shell_configs/scripts/goose/: db-helper
src/shell_configs/scripts/health/: backup-resmed
src/shell_configs/scripts/system/: disk-cleanup
src/shell_configs/scripts/transcription/: transcribe
src/shell_configs/scripts/windows/: fix-date-formatting
src/shell_configs/scripts/work_laptop/: backup-repos  laptop-upgrade
src/shell_configs/shells/: __init__.py  base.py  bash.py  cursor.py  editor.py  git.py  iterm2.py  notepadpp.py  powershell.py  registry.py  state_db.py  sublime.py  utils.py  vscode.py  windows_terminal.py  xdg.py  zsh.py
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_cli_e2e.py  test_install_e2e.py  test_shell_functions_e2e.py  test_shell_sourcing_e2e.py  test_status_diff_e2e.py  test_uninstall_e2e.py  test_validate_e2e.py
tests/integration/: test_backup_resmed.py  test_cli.py  test_configs_group.py
tests/unit/: test_agent_manifest.py  test_agents.py  test_bootstrap_config.py  test_bootstrap_installer.py  test_bootstrap_updater.py  test_bootstrap_version.py  test_component_needs_sudo.py  test_component_uninstall.py  test_config.py  test_cursor_local.py  test_cursor_wsl.py  test_disk_cleanup.py  test_display.py  test_editor_shells.py  test_extensions.py  test_extensions_cli.py  test_gh_auth.py  test_gh_extensions.py  test_iterm2.py  test_languages.py  test_manager.py  test_notepadpp.py  test_packages.py  test_platform.py  test_profile_cli.py  test_profile_config.py  test_profiles.py  test_script_manager.py  test_shells.py  test_signing.py  test_sublime.py  test_vscode_local.py  test_vscode_wsl.py  test_windows_terminal.py  test_worktree_shell.py  test_wsl_utils.py
