[project]
name = "shell-configs"
version = "0.36.3"
description = "Manage shell configuration files across machines with version control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Will Pfleger", email = "pfleger.will@gmail.com" }
]
keywords = ["shell", "cli", "configuration", "dotfiles", "bash", "zsh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.3",
    "packaging>=26.2",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "tomli>=2.0.0; python_version<'3.11'",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/wpfleger96/shell-configs"
Repository = "https://github.com/wpfleger96/shell-configs"
Issues = "https://github.com/wpfleger96/shell-configs/issues"

[project.scripts]
shell-configs = "shell_configs.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shell_configs = ["config/**/*", "scripts/**/*"]

[tool.ruff.lint]
select = ["I", "F", "UP", "B"]  # isort, pyflakes, pyupgrade, bugbear

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=shell_configs --cov-report=term-missing"
markers = [
    "unit: Unit tests that don't touch the filesystem",
    "integration: Integration tests that modify files",
    "cli: CLI command tests",
    "bootstrap: Bootstrap module tests",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
exclude = ["^src/shell_configs/scripts/"]

[[tool.mypy.overrides]]
module = ["yaml.*", "tomli.*"]
ignore_missing_imports = true  # Only for external libs without stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["var-annotated", "type-arg"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
branch = "main"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
allow_zero_version = true
build_command = "uv sync"

[tool.semantic_release.commit_parser_opts]
allowed_types = ["feat", "fix", "chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore\\(release\\)"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
